@@ -93,6 +93,7 @@ TODO: Make libout123 and/or mpg123 use that to convert on the fly. Optionally?
    (oss-fuzz-bug 15852) 
 -- Fix out-of-bounds read for RVA2 frames with non-delimited identifier.
    (oss-fuzz-bug 15852)
+-- Fix implementation-defined parsing of RVA2 values. (oss-fuzz-bug 15862)
 
 1.25.10
 -------
